--- a/css/component.css
+++ b/css/component.css
@@ -139,8 +139,8 @@ html.js,
 
 .info {
     font-family: 'Lora', serif;
-    font-size: 1.25em;
-    max-width: 50%;
+    font-size: 0.1;
+    max-width: 21%;
     margin-top: 1.5em;
 }
 .poster {
