--- a/css/demo.css
+++ b/css/demo.css
@@ -30,7 +30,7 @@ body {
     font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
     margin: 0;
     color: #cecece;
-    background: #1d1e21;
+    background: #8A7862;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -49,13 +49,14 @@ a:hover {
     padding: 6em 10vw 2em;
 }
 .bp-header__title {
+    font-family: 'Merriweather', serif;
     font-size: 2.125em;
-    font-weight: 700;
     line-height: 1.3;
     margin: 0;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #fff;
+    color: #E46018;
+    margin-bottom: 50px;
 }
 .bp-header__desc {
     font-size: 0.95em;
@@ -63,7 +64,7 @@ a:hover {
     padding: 0;
 }
 .logo {
-    margin-top: 4em;
+    margin-top: 1em;
     width: 20%;
 }
 @media screen and (max-width: 40em) {
