--- a/css/store.css
+++ b/css/store.css
@@ -48,13 +48,11 @@ Primary style
 *::before {
     content: '';
 }
-body {
-    font-size: 100%;
-    font-family: "PT Sans", sans-serif;
+#page-store {
     color: #3e585f;
     background-color: #47374e;
 }
-body::after {
+#page-store::after {
     /* dark overlay layer - visible when we fire .cd-quick-view */
     position: fixed;
     top: 0;
@@ -69,7 +67,7 @@ body::after {
     transition: opacity .3s 0s, visibility 0s .3s;
 }
 @media only screen and (min-width: 1024px) {
-    body.overlay-layer::after {
+    #page-store.overlay-layer::after {
         visibility: visible;
         opacity: 1;
         -webkit-transition: opacity .3s 0s, visibility 0s 0s;
@@ -77,11 +75,11 @@ body::after {
         transition: opacity .3s 0s, visibility 0s 0s;
     }
 }
-a {
+#page-store a {
     color: #f82f53;
     text-decoration: none;
 }
-img {
+#page-store img {
     max-width: 100%;
 }
 
@@ -91,13 +89,13 @@ Modules - reusable parts of our design
 
 -------------------------------- */
 
-.cd-container {
+#page-store .cd-container {
     /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
     width: 90%;
     max-width: 1170px;
     margin: 0 auto;
 }
-.cd-container:after {
+#page-store .cd-container:after {
     content: "";
     display: table;
     clear: both;
@@ -109,11 +107,7 @@ Main components
 
 -------------------------------- */
 
-html,
-body {
-    height: 100%;
-}
-header {
+#page-store .bp-header {
     position: relative;
     height: 160px;
     line-height: 170px;
@@ -121,43 +115,43 @@ header {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-header h1 {
+#page-store .bp-header h1 {
     color: #ffffff;
     font-size: 20px;
     font-size: 1.25rem;
 }
 @media only screen and (min-width: 768px) {
-    header {
+    #page-store .bp-header {
         line-height: 180px;
     }
-    header h1 {
+    #page-store .bp-header h1 {
         font-size: 26px;
         font-size: 1.625rem;
     }
 }
 @media only screen and (min-width: 1024px) {
-    header {
+    #page-store .bp-header {
         line-height: 220px;
     }
 }
-.cd-items {
+#page-store .cd-items {
     padding: 1em 0;
 }
 @media only screen and (min-width: 768px) {
-    .cd-items {
+    #page-store .cd-items {
         padding: 2em 0 0;
     }
 }
 @media only screen and (min-width: 1024px) {
-    .cd-items {
+    #page-store .cd-items {
         padding: 4em 0 0;
     }
 }
-.cd-item {
+#page-store .cd-item {
     position: relative;
     margin: 0 0 1em;
 }
-.cd-item > img {
+#page-store .cd-item > img {
     display: block;
     width: 100%;
     /*}
@@ -166,38 +160,37 @@ header h1 {
 	z-index:9999*/
 }
 @media only screen and (min-width: 768px) {
-    .cd-item {
+    #page-store .cd-item {
         width: 48%;
         float: left;
         margin: 0 4% 2em 0;
     }
-    .cd-item:nth-child(2n) {
+    #page-store .cd-item:nth-child(2n) {
         margin-right: 0;
     }
 }
 @media only screen and (min-width: 1024px) {
-    .cd-item {
+    #page-store .cd-item {
         width: 22%;
         float: left;
         margin: 0 4% 2.8em 0;
     }
-    .cd-item:nth-child(2n) {
+    #page-store .cd-item:nth-child(2n) {
         margin-right: 4%;
     }
-    .cd-item:nth-child(4n) {
+    #page-store .cd-item:nth-child(4n) {
         margin-right: 0;
     }
-    .cd-item.empty-box::after {
+    #page-store .cd-item.empty-box::after {
         /* box visible as placeholder when the .cd-quick-view zooms in */
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
         background-color: #392c3f;
     }
 }
-.cd-trigger {
+#page-store .cd-trigger {
     position: absolute;
     height: 50px;
     line-height: 50px;
@@ -215,36 +208,36 @@ header h1 {
     -moz-transition: opacity 0.2s, background-color 0.2s;
     transition: opacity 0.2s, background-color 0.2s;
 }
-.no-touch .cd-trigger:hover {
+#page-store .no-touch .cd-trigger:hover {
     background: rgba(0, 0, 0, 0.2);
 }
 @media only screen and (min-width: 1024px) {
-    .cd-trigger {
+    #page-store .cd-trigger {
         /* always visible on small devices */
         visibility: visible;
         opacity: 1;
     }
 }
 @media only screen and (min-width: 1170px) {
-    .cd-trigger {
+    #page-store .cd-trigger {
         /* only visible on hover on big devices */
         opacity: 0;
     }
 }
 @media only screen and (min-width: 1170px) {
-    .no-touch .cd-item:hover .cd-trigger {
+    #page-store .no-touch .cd-item:hover .cd-trigger {
         opacity: 1;
     }
-    .touch .cd-item .cd-trigger {
+    #page-store .touch .cd-item .cd-trigger {
         opacity: 1;
     }
 }
-.cd-quick-view {
+#page-store .cd-quick-view {
     /* quick view non available on small devices */
     display: none;
 }
 @media only screen and (min-width: 1024px) {
-    .cd-quick-view {
+    #page-store .cd-quick-view {
         display: block;
         position: fixed;
         max-width: 900px;
@@ -260,16 +253,16 @@ header h1 {
         will-change: left, top, width;
         z-index: 9999;
     }
-    .cd-quick-view:after {
+    #page-store .cd-quick-view:after {
         content: "";
         display: table;
         clear: both;
     }
-    .cd-quick-view.is-visible {
+    #page-store .cd-quick-view.is-visible {
         /* class added when user clicks on .cd-trigger */
         visibility: visible;
     }
-    .cd-quick-view.animate-width {
+    #page-store .cd-quick-view.animate-width {
         /* class added at the end of the first zoom-in animation */
         background-color: #ffffff;
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
@@ -278,131 +271,34 @@ header h1 {
         transition: box-shadow 0.3s;
     }
 }
-.cd-slider-wrapper {
+#page-store .cd-slider-wrapper {
     position: relative;
     display: inline-block;
     float: left;
 }
-.cd-slider-wrapper:after {
+#page-store .cd-slider-wrapper:after {
     content: "";
     display: table;
     clear: both;
 }
-.cd-slider {
+#page-store .cd-slider {
     float: left;
 }
-.cd-slider li {
+#page-store .cd-slider li {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
 }
-.cd-slider li img {
+#page-store .cd-slider li img {
     display: block;
     width: 100%;
     max-width: 400px;
 }
-.cd-slider li.selected {
-    position: relative;
-    z-index: 3;
-}
-.add-content .cd-slider {
+#page-store .add-content .cd-slider {
     margin-right: 3em;
 }
-.cd-slider-navigation {
-    opacity: 0;
-}
-.add-content .cd-slider-navigation {
-    opacity: 1;
-}
-.cd-slider-navigation li {
-    position: absolute;
-    top: 50%;
-    bottom: auto;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
-    z-index: 3;
-}
-.cd-slider-navigation li:first-child {
-    left: 0;
-}
-.cd-slider-navigation li:last-child {
-    /* equal to the .cd-slider-wrapper margin-right */
-    right: 3em;
-}
-.cd-slider-navigation li a {
-    display: block;
-    width: 40px;
-    height: 50px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    opacity: 0;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition: opacity 0.2s, background 0.2s;
-    -moz-transition: opacity 0.2s, background 0.2s;
-    transition: opacity 0.2s, background 0.2s;
-}
-.cd-slider-navigation li a::before,
-.cd-slider-navigation li a::after {
-    /* create arrows in CSS */
-    position: absolute;
-    top: 18px;
-    left: 14px;
-    display: inline-block;
-    background: #ffffff;
-    height: 3px;
-    width: 12px;
-}
-.cd-slider-navigation li a::before {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-.cd-slider-navigation li a::after {
-    -webkit-transform: translateY(7px) rotate(-45deg);
-    -moz-transform: translateY(7px) rotate(-45deg);
-    -ms-transform: translateY(7px) rotate(-45deg);
-    -o-transform: translateY(7px) rotate(-45deg);
-    transform: translateY(7px) rotate(-45deg);
-}
-.add-content .cd-slider-navigation li a {
-    opacity: .2;
-}
-.no-touch .cd-slider-navigation li a:hover {
-    background: rgba(71, 55, 78, 0.8);
-    opacity: 1;
-}
-.touch .cd-slider-navigation li a {
-    opacity: 1;
-}
-.cd-slider-navigation li:first-child a::before {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-.cd-slider-navigation li:first-child a::after {
-    -webkit-transform: translateY(7px) rotate(45deg);
-    -moz-transform: translateY(7px) rotate(45deg);
-    -ms-transform: translateY(7px) rotate(45deg);
-    -o-transform: translateY(7px) rotate(45deg);
-    transform: translateY(7px) rotate(45deg);
-}
-.cd-item-info {
+#page-store .cd-item-info {
     position: absolute;
     padding: 3em 3em 3em 0;
     visibility: hidden;
@@ -411,23 +307,23 @@ header h1 {
     -moz-transition: opacity .3s, visibility 0s;
     transition: opacity .3s, visibility 0s;
 }
-.cd-item-info h2 {
+#page-store .cd-item-info h2 {
     font-size: 28px;
     font-size: 1.75rem;
 }
-.cd-item-info p {
+#page-store .cd-item-info p {
     line-height: 1.6;
     margin: 1em 0;
     color: #67919c;
 }
-.cd-item-info .cd-item-action li {
+#page-store .cd-item-info .cd-item-action li {
     display: inline-block;
     margin-right: 1em;
 }
-.cd-item-info .cd-item-action li:first-child {
+#page-store .cd-item-info .cd-item-action li:first-child {
     margin-left: -4px;
 }
-.cd-item-info .add-to-cart {
+#page-store .cd-item-info .add-to-cart {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
@@ -445,23 +341,23 @@ header h1 {
     font-size: 1rem;
     cursor: pointer;
 }
-.add-content .cd-item-info {
+#page-store .add-content .cd-item-info {
     /* class added at the end of the width animation, used to show the content */
     position: relative;
     visibility: visible;
     opacity: 1;
 }
-.add-content .cd-item-info h2 {
+#page-store .add-content .cd-item-info h2 {
     -webkit-animation: cd-slide-in 0.3s;
     -moz-animation: cd-slide-in 0.3s;
     animation: cd-slide-in 0.3s;
 }
-.add-content .cd-item-info p {
+#page-store .add-content .cd-item-info p {
     -webkit-animation: cd-slide-in 0.4s;
     -moz-animation: cd-slide-in 0.4s;
     animation: cd-slide-in 0.4s;
 }
-.add-content .cd-item-info .cd-item-action {
+#page-store .add-content .cd-item-info .cd-item-action {
     -webkit-animation: cd-slide-in 0.5s;
     -moz-animation: cd-slide-in 0.5s;
     animation: cd-slide-in 0.5s;
@@ -498,7 +394,7 @@ header h1 {
         transform: translate3d(0, 0, 0);
     }
 }
-.cd-close {
+#page-store .cd-close {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -520,8 +416,8 @@ header h1 {
     transition: transform .3s 0s, visibility 0s .3s;
     z-index: 9999;
 }
-.cd-close::before,
-.cd-close::after {
+#page-store .cd-close::before,
+#page-store .cd-close::after {
     /* close icon in css */
     position: absolute;
     top: 12px;
@@ -533,28 +429,28 @@ header h1 {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-.cd-close::before {
+#page-store .cd-close::before {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
-.cd-close::after {
+#page-store .cd-close::after {
     -webkit-transform: rotate(135deg);
     -moz-transform: rotate(135deg);
     -ms-transform: rotate(135deg);
     -o-transform: rotate(135deg);
     transform: rotate(135deg);
 }
-.no-touch .cd-close:hover {
+#page-store .no-touch .cd-close:hover {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     -ms-transform: scale(1.2);
     -o-transform: scale(1.2);
     transform: scale(1.2);
 }
-.add-content .cd-close {
+#page-store .add-content .cd-close {
     visibility: visible;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -565,10 +461,10 @@ header h1 {
     -moz-transition: -moz-transform .3s 0s, visibility 0s 0s;
     transition: transform .3s 0s, visibility 0s 0s;
 }
-.quick-view-content {
+#page-store .quick-view-content {
     display: none
 }
-#cd-quick-view-coverlay {
+#page-store #cd-quick-view-coverlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -583,7 +479,7 @@ header h1 {
     opacity: 0;
     display: none;
 }
-#cd-quick-view-coverlay.overlay_active {
+#page-store #cd-quick-view-coverlay.overlay_active {
     display: block;
     opacity: 1;
 }
