--- a/css/store.css
+++ b/css/store.css
@@ -187,7 +187,7 @@ Main components
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #392c3f;
+        background-color: #6D4626;
     }
 }
 #page-store .cd-item > .cd-trigger {
@@ -445,7 +445,7 @@ Main components
     display: inline-block;
     height: 4px;
     width: 20px;
-    background: #47374e;
+    background: #6D4626;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
