finalized the style of the store

--- a/css/store.css
+++ b/css/store.css
@@ -30,6 +30,10 @@ Reset
 #page-store ul {
     list-style: none;
 }
+#page-store .info ul {
+    list-style-type: circle;
+    display: block;
+}
 
 /* -------------------------------- 
 
