--- a/css/store.css
+++ b/css/store.css
@@ -92,6 +92,19 @@ Primary style
 #page-store img {
     max-width: 100%;
 }
+#page-store .bp-header {
+    padding: 6em 10vw 2em;
+}
+#page-store .bp-header__title {
+    font-family: 'Merriweather', serif;
+    font-size: 2.125em;
+    line-height: 1.3;
+    margin: 0;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #E46018;
+    margin-bottom: 50px;
+}
 
 /* -------------------------------- 
 
@@ -127,18 +140,9 @@ Main components
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-#page-store .st-header .st-h {
-    color: #ffffff;
-    font-size: 20px;
-    font-size: 1.25rem;
-}
 @media only screen and (min-width: 768px) {
     #page-store .st-header {
         line-height: 180px;
-    }
-    #page-store .st-header .st-h {
-        font-size: 26px;
-        font-size: 1.625rem;
     }
 }
 @media only screen and (min-width: 1024px) {
